On click search jump fix

--- a/scss/pages/_wp-blog.scss
+++ b/scss/pages/_wp-blog.scss
@@ -82,6 +82,7 @@
                 outline: none;
                 background-color: transparent;
                 border:0;
+                top: 0;
             }
             &:hover {
                 outline: none;
